--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,8 +2,7 @@ name: Django Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 job:
   build:
@@ -11,16 +10,16 @@ job:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python 3.10
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Lint with Flake8
       run: |
